refactor : 빈 리스트를 반환한다는 것을 명시적으로 표현